got temp switch/quote appear

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -21,5 +21,24 @@ main {
     font-size: 105px;
 }
 
+#full-body {
+  display: block;
+  background-size: cover;
+  background-position: center;
+}
 
+#mid-page {
+  min-height: 76vh;
+}
 
+.authorH {
+  &:hover{
+    .authorV {
+      opacity: 1;
+    }
+  }
+  .authorV {
+    opacity: 0;
+    transition: all .3s linear
+  }
+}
