--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -58,3 +58,16 @@ main {
 				  -1px -1px 0 #b6caa8;
 }
 
+.hrb {
+   display: block;
+   
+   overflow: hidden; 
+   border-style: inset; 
+   border-width: 2px;
+   border-color: rgb(241, 241, 241);
+   box-shadow: -1px 1px 2px #23430C,
+   1px 1px 2px #23430C,
+   1px -1px 2px #23430C,
+   -1px -1px 2px #23430C;
+  }
+
