done for the night saturday

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,7 +5,7 @@ $secondary: #FF3697;
 $danger: #EB5757;
 $success: #27AE60;
 $warning: #FF7F50;
-$info: #00C9BD;
+$info: #02f3e3;
 $dark: #272727;
 
 $blue: blue;
