--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -47,7 +47,14 @@ main {
 				  1px 1px 2px #23430C,
 				  1px -1px 2px #23430C,
 				  -1px -1px 2px #23430C;
+          &:not(img){ 
+            text-shadow: 0 0 0,
+              0 0 0,
+              0 0 0,
+              0 0 0;
+           }
 }
+
 
 .textR{
 	color: rgb(97, 63, 63);
